--- a/sass/base/forms/_fields.scss
+++ b/sass/base/forms/_fields.scss
@@ -23,6 +23,7 @@ textarea {
 	transition-property: background, color, opacity, transform, box-shadow;
 	transition-duration: 0.25s;
 	transition-timing-function: ease-in-out;
+	border-radius: .25rem;
 
 	&:focus {
 		background-color: rgba( 255,255,255,1 );
@@ -31,6 +32,47 @@ textarea {
 		outline: none;
 		z-index: 1;
 	}
+}
+
+select {
+	background-image:
+		linear-gradient(45deg, transparent 50%, gray 50%),
+		linear-gradient(135deg, gray 50%, transparent 50%);
+	background-position:
+		calc(100% - 15px) calc(1em + 3px),
+		calc(100% - 10px) calc(1em + 3px);
+	background-size:
+		5px 5px,
+		5px 5px;
+	background-repeat: no-repeat;
+	background-color: rgba( 255,255,255,.5 );
+	border: 1px solid $color__border-input;
+	color: $color__text-input;
+	padding: .5rem;
+	width: 100%;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
+    text-overflow: '';
+    border-radius: .25rem;
+    &:focus {
+    	background-color: rgba( 255,255,255,1 );
+    }
+}
+
+select::-ms-expand {
+    display: none;
+}
+
+textarea {
+	width: 100%;
+}
+
+label {
+	color: $color__text-label;
+	display: block;
+	@include font-size(0.875);
+	margin-bottom: .25rem;
 }
 
 ::-webkit-input-placeholder {
@@ -47,40 +89,4 @@ textarea {
 
 :-ms-input-placeholder {
 	color: $color__text-input;
-}
-
-select {
-	background-image:
-		linear-gradient(45deg, transparent 50%, gray 50%),
-		linear-gradient(135deg, gray 50%, transparent 50%);
-	background-position:
-		calc(100% - 15px) calc(1em + 3px),
-		calc(100% - 10px) calc(1em + 3px);
-	background-size:
-		5px 5px,
-		5px 5px;
-	background-repeat: no-repeat;
-	background-color: rgba( 255,255,255,.75 );
-	border: 1px solid $color__border-input;
-	padding: .5rem;
-	width: 100%;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    text-indent: 1px;
-    text-overflow: '';
-}
-
-select::-ms-expand {
-    display: none;
-}
-
-textarea {
-	width: 100%;
-}
-
-label {
-	color: $color__text-label;
-	display: block;
-	@include font-size(0.875);
-	margin-bottom: .5rem;
 }
