--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -23,6 +23,11 @@
 	clear: both;
 }
 
+@mixin radius-shadow(){
+	border-radius: .25rem;
+	box-shadow: 0 8px 92px $color__alpha-dark;
+}
+
 // Column width with margin
 @mixin column-width($numberColumns: 3) {
 	width: map-get( $columns, $numberColumns );
