--- a/sass/components/navigation/_breadcrumb.scss
+++ b/sass/components/navigation/_breadcrumb.scss
@@ -1,10 +1,5 @@
 .breadcrumb {
-	background-color: $color__white;
-	border-top: 1px solid $color__alpha-dark;
-	border-bottom: 1px solid $color__alpha-dark;
 	@include font-size( 0.875 );
-	padding-top: $gutter__width;
-	padding-bottom: $gutter__width;
 	.separator {
 		color: $color__text-secondary;
 	}
@@ -14,5 +9,11 @@
 		&:focus {
 			color: $color__link;
 		}
+	}
+	.has-archive-thumbnail &{
+		background-color: rgba( 0,0,0,.5 );
+		display: inline-block;
+		padding: .25rem 1rem;
+		border-radius: .25rem;
 	}
 }
