--- a/sass/plugins/woocommerce/_components.scss
+++ b/sass/plugins/woocommerce/_components.scss
@@ -47,6 +47,7 @@
  * Star rating
  */
 .star-rating {
+	display: inline-block;
 	overflow: hidden;
 	position: relative;
 	height: 1.618em;
@@ -159,6 +160,11 @@ p.stars {
 .woocommerce-tabs {
 	clear: both;
 	padding-top: 1.5rem;
+	margin-bottom: 1.5rem;
+
+	h2 {
+		@include font-size(1.5);
+	}
 	ul.tabs {
 		background-color: $color__white;
 		list-style: none;
@@ -370,7 +376,7 @@ a.reset_variations:before {
 .select2-container--default .select2-selection--single,
 .select2-container--default .select2-selection--multiple,
 .select2-dropdown {
-	border-radius: 0!important;
+	border-radius: .25rem!important;
 }
 
 @media screen and (min-width: 48em) {
