--- a/sass/plugins/woocommerce/_products.scss
+++ b/sass/plugins/woocommerce/_products.scss
@@ -1,9 +1,9 @@
 .result-count-wrap {
 	background-color: $color__white;
 	padding: $gutter__width;
-	border-radius: .25rem;
 	margin-bottom: $gutter__width;
-	box-shadow: 0 8px 16px rgba( 0,0,0,.1 );
+	@include radius-shadow();
+
 	@include respond-to( small ){
 		margin-bottom: $gutter__width*2;
 	}
@@ -62,17 +62,20 @@ ul.products {
 
 		.woocommerce-loop-product__title {
 			@include font-size(1);
+			margin-bottom: .5rem;
 		}
 
 		img {
 			display: block;
+			width: 100%;
 		}
 
 		.star-rating {
 			@include font-size(0.875);
 			position: absolute;
 			top: 15px;
-			right: 10px;
+			right: 15px;
+			text-shadow: 0 -1px 0 $color__white;
 		}
 
 		.button {
@@ -98,11 +101,16 @@ ul.products {
 	position: relative;
 	padding: $gutter__width;
 	transition: all ease-in-out 0.25s;
-	border-radius: .25rem;
-	box-shadow: 0 8px 16px rgba( 0,0,0,.1 );
+	@include radius-shadow();
 	&:hover {
 		box-shadow: 0 8px 32px rgba( 0,0,0,.25 );
 		z-index: 1;
+	}
+	.upsells.products &,
+	.related.products &,
+	.cross-sells & {
+		border: 1px solid $color__alpha-dark;
+		box-shadow: none;
 	}
 }
 
@@ -128,8 +136,8 @@ ul.products {
 	}
 	&,
 	img {
-		border-top-left-radius: .5rem;
-		border-top-right-radius: .5rem;
+		border-top-left-radius: .25rem;
+		border-top-right-radius: .25rem;
 	}
 }
 
@@ -207,23 +215,6 @@ a.added_to_cart.wc-forward {
 				li.product {
 					@include column-width( $i );
 				}
-			}
-		}
-	}
-
-	.sidebar-content,
-	.content-sidebar {
-		ul.products {
-			li.product {
-				@include column-width( 3 );
-			}
-		}
-	}
-
-	.full-width {
-		ul.products {
-			.li.products {
-				@include column-width( 4 );
 			}
 		}
 	}
