--- a/style.css
+++ b/style.css
@@ -435,10 +435,14 @@ dd {
 }
 
 table {
+	overflow: hidden;
 	width: 100%;
 	margin: 0 0 1.5rem;
-	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: 0.25rem;
+	border-collapse: collapse;
 	background-color: #fff;
+	-webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 4px 12px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 caption {
@@ -583,6 +587,7 @@ pre {
 	margin-bottom: 1.5rem;
 	padding: 1rem;
 	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: 0.25rem;
 	background-color: #fff;
 	font-family: "Courier 10 Pitch", Courier, monospace;
 	font-size: 15px;
@@ -657,6 +662,7 @@ input[type="submit"] {
 	position: relative;
 	padding: 0.75rem 1rem;
 	border: 1px solid #ff5722;
+	border-radius: 0.25rem;
 	color: #fff;
 	background-color: #ff5722;
 	font-size: 16px;
@@ -732,6 +738,7 @@ textarea {
 	width: 100%;
 	padding: 0.5rem;
 	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: 0.25rem;
 	color: #909090;
 	background-color: rgba(255, 255, 255, 0.5);
 	-webkit-transition-timing-function: ease-in-out;
@@ -768,6 +775,44 @@ textarea:focus {
 	box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.025);
 }
 
+select {
+	width: 100%;
+	padding: 0.5rem;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: 0.25rem;
+	color: #909090;
+	background-color: rgba(255, 255, 255, 0.5);
+	background-image: linear-gradient(45deg, transparent 50%, gray 50%), linear-gradient(135deg, gray 50%, transparent 50%);
+	background-repeat: no-repeat;
+	background-position: calc(100% - 15px) calc(1em + 3px), calc(100% - 10px) calc(1em + 3px);
+	background-size: 5px 5px, 5px 5px;
+	text-indent: 1px;
+	text-overflow: "";
+
+	-webkit-appearance: none;
+	-moz-appearance: none;
+}
+
+select:focus {
+	background-color: white;
+}
+
+select::-ms-expand {
+	display: none;
+}
+
+textarea {
+	width: 100%;
+}
+
+label {
+	display: block;
+	margin-bottom: 0.25rem;
+	color: #909090;
+	font-size: 14px;
+	font-size: 0.875rem;
+}
+
 ::-webkit-input-placeholder {
 	color: #909090;
 }
@@ -784,38 +829,6 @@ textarea:focus {
 
 :-ms-input-placeholder {
 	color: #909090;
-}
-
-select {
-	width: 100%;
-	padding: 0.5rem;
-	border: 1px solid rgba(0, 0, 0, 0.1);
-	background-color: rgba(255, 255, 255, 0.75);
-	background-image: linear-gradient(45deg, transparent 50%, gray 50%), linear-gradient(135deg, gray 50%, transparent 50%);
-	background-repeat: no-repeat;
-	background-position: calc(100% - 15px) calc(1em + 3px), calc(100% - 10px) calc(1em + 3px);
-	background-size: 5px 5px, 5px 5px;
-	text-indent: 1px;
-	text-overflow: "";
-
-	-webkit-appearance: none;
-	-moz-appearance: none;
-}
-
-select::-ms-expand {
-	display: none;
-}
-
-textarea {
-	width: 100%;
-}
-
-label {
-	display: block;
-	margin-bottom: 0.5rem;
-	color: #606060;
-	font-size: 14px;
-	font-size: 0.875rem;
 }
 
 
@@ -901,6 +914,10 @@ label {
 
 .clear:before,
 .clear:after,
+.columns:before,
+.columns:after,
+.entry:before,
+.entry:after,
 .entry-content:before,
 .entry-content:after,
 .comment-content:before,
@@ -917,6 +934,8 @@ label {
 .entry-inner:after,
 .checkout:before,
 .checkout:after,
+.coupon:before,
+.coupon:after,
 ul.products:before,
 ul.products:after,
 .woocommerce-tabs ul.tabs:before,
@@ -924,13 +943,23 @@ ul.products:after,
 .form-row:before,
 .form-row:after,
 .cart:before,
-.cart:after {
+.cart:after,
+.woocommerce-billing-fields:before,
+.woocommerce-billing-fields:after,
+.woocommerce-shipping-fields:before,
+.woocommerce-shipping-fields:after,
+.woocommerce-additional-fields:before,
+.woocommerce-additional-fields:after,
+.search-form:before,
+.search-form:after {
 	display: table;
 	table-layout: fixed;
 	content: "";
 }
 
 .clear:after,
+.columns:after,
+.entry:after,
 .entry-content:after,
 .comment-content:after,
 .site-header:after,
@@ -939,10 +968,15 @@ ul.products:after,
 .entry-inner:after,
 .widget:after,
 .checkout:after,
+.coupon:after,
 ul.products:after,
 .woocommerce-tabs ul.tabs:after,
 .form-row:after,
-.cart:after {
+.cart:after,
+.woocommerce-billing-fields:after,
+.woocommerce-shipping-fields:after,
+.woocommerce-additional-fields:after,
+.search-form:after {
 	clear: both;
 }
 
@@ -1203,8 +1237,6 @@ svg symbol {
 	clear: both;
 	position: relative;
 	z-index: 5;
-	margin-right: -10px;
-	margin-left: -10px;
 	color: #fff;
 	-webkit-transition: all ease-in-out 0.25s;
 	transition: all ease-in-out 0.25s;
@@ -1284,11 +1316,6 @@ svg symbol {
 --------------------------------------------------------------*/
 
 .breadcrumb {
-	padding-top: 10px;
-	padding-bottom: 10px;
-	border-top: 1px solid rgba(0, 0, 0, 0.1);
-	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-	background-color: #fff;
 	font-size: 14px;
 	font-size: 0.875rem;
 }
@@ -1306,6 +1333,13 @@ svg symbol {
 	color: #ff5722;
 }
 
+.has-archive-thumbnail .breadcrumb {
+	display: inline-block;
+	padding: 0.25rem 1rem;
+	border-radius: 0.25rem;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
 
 /*--------------------------------------------------------------
 ## Posts Navigation
@@ -1319,8 +1353,9 @@ svg symbol {
 	position: relative;
 	width: 100%;
 	margin: 0 0 10px;
-	-webkit-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+	border-radius: 0.25rem;
+	-webkit-box-shadow: 0 8px 92px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 8px 92px rgba(0, 0, 0, 0.1);
 }
 
 .site-main .comment-navigation,
@@ -1385,6 +1420,15 @@ svg symbol {
 	color: #909090;
 }
 
+.comment-navigation {
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
+.comment-navigation a {
+	padding: 0;
+}
+
 /** Pagination */
 
 .pagination {
@@ -1395,9 +1439,55 @@ svg symbol {
 	margin-bottom: 10px;
 	border-radius: 0.25rem;
 	background-color: #fff;
-	-webkit-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0 8px 92px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 8px 92px rgba(0, 0, 0, 0.1);
 	text-align: center;
+}
+
+.page-numbers {
+	display: none;
+	position: relative;
+	padding: 1rem 1.25rem;
+	color: #505050;
+	font-weight: 500;
+}
+
+.page-numbers.current {
+	display: inline-block;
+	color: #505050;
+}
+
+.page-numbers.current .screen-reader-text {
+	overflow: auto;
+	clip: auto;
+	position: relative !important;
+	width: auto;
+	height: auto;
+}
+
+.page-numbers.next,
+.page-numbers.prev {
+	display: block;
+	position: absolute;
+	top: 0;
+}
+
+.page-numbers.next {
+	right: 0;
+}
+
+.page-numbers.prev {
+	left: 0;
+}
+
+.page-numbers:hover:not(.current),
+.page-numbers:focus:not(.current) {
+	color: #ff916f;
+}
+
+.page-numbers.dots:hover,
+.page-numbers.dots:focus {
+	color: #505050 !important;
 }
 
 
@@ -1420,8 +1510,8 @@ svg symbol {
 	padding: 10px;
 	border-radius: 0.25rem;
 	background-color: #fff;
-	-webkit-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0 8px 92px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 8px 92px rgba(0, 0, 0, 0.1);
 	-webkit-transition: all 0.25s ease-in-out;
 	transition: all 0.25s ease-in-out;
 }
@@ -1493,8 +1583,8 @@ svg symbol {
 	position: relative;
 	margin-bottom: 1rem;
 	color: #505050;
-	font-size: 24px;
-	font-size: 1.5rem;
+	font-size: 28px;
+	font-size: 1.75rem;
 	line-height: 1;
 }
 
@@ -1545,6 +1635,8 @@ a.more-link:focus {
 	border-color: #ff5722;
 	color: #fff;
 	background-color: #ff5722;
+	-webkit-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
+	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
 }
 
 a.more-link:hover .icon-stroke,
@@ -1564,19 +1656,29 @@ a.more-link:focus .icon-stroke {
 	background-color: #ff5722;
 }
 
+.author-info {
+	overflow: hidden;
+	margin-bottom: 10px;
+	padding: 10px;
+	border-radius: 0.25rem;
+	background-color: #fff;
+	-webkit-box-shadow: 0 8px 92px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 8px 92px rgba(0, 0, 0, 0.1);
+}
+
 
 /*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
 
 .comments-area {
-	margin-bottom: 4rem;
-	padding-top: 3rem;
-	padding-right: 1.5rem;
-	padding-bottom: 3rem;
-	padding-left: 1.5rem;
+	margin-bottom: 10px;
+	padding: 10px;
 	border-top: 1px solid rgba(0, 0, 0, 0.05);
+	border-radius: 0.25rem;
 	background-color: #fff;
+	-webkit-box-shadow: 0 8px 92px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 8px 92px rgba(0, 0, 0, 0.1);
 }
 
 .bypostauthor {
@@ -1585,8 +1687,20 @@ a.more-link:focus .icon-stroke {
 
 .comments-title {
 	position: relative;
-	margin-bottom: 1.5rem;
-	padding-bottom: 1.5rem;
+	margin-bottom: 1rem;
+	padding-bottom: 1rem;
+	font-size: 20px;
+	font-size: 1.25rem;
+}
+
+.comments-title:before {
+	position: absolute;
+	bottom: -1px;
+	left: 0;
+	width: 32px;
+	height: 2px;
+	background-color: #909090;
+	content: " ";
 }
 
 .comment-list,
@@ -1682,6 +1796,7 @@ a.more-link:focus .icon-stroke {
 	margin-bottom: 1.5rem;
 	padding: 0.5rem 1.5em;
 	border: 1px solid #909090;
+	border-radius: 0.25rem;
 	color: #909090;
 	background: transparent;
 	font-size: 14px;
@@ -1694,6 +1809,8 @@ a.more-link:focus .icon-stroke {
 	border-color: #ff5722;
 	color: #fff;
 	background-color: #ff5722;
+	-webkit-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .comment-reply-title {
@@ -1776,6 +1893,8 @@ a.more-link:focus .icon-stroke {
 	float: left;
 	width: calc( 100% - 42px);
 	border-right-width: 0;
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
 
 	-web-webkit-appearance: textfield;
 }
@@ -1785,6 +1904,7 @@ a.more-link:focus .icon-stroke {
 	float: right;
 	width: 42px;
 	height: 42px;
+	padding: 0.5rem;
 	border-top-left-radius: 0;
 	border-bottom-left-radius: 0;
 }
@@ -1881,12 +2001,61 @@ a.more-link:focus .icon-stroke {
 	position: relative;
 	z-index: 5;
 	background-color: #fff;
-	-webkit-box-shadow: 0 16px 32px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 16px 32px rgba(0, 0, 0, 0.1);
+	-webkit-transition: all 0.25s ease-in-out;
+	transition: all 0.25s ease-in-out;
 }
 
 .site-header > .container {
 	position: relative;
+}
+
+.header-menu-toggle {
+	position: absolute;
+	z-index: 5;
+	top: 18px;
+	left: 10px;
+	padding: 0;
+	border-color: transparent;
+	opacity: 0;
+	color: #505050;
+	background-color: transparent;
+	cursor: pointer;
+	-webkit-transition: all 0.5s ease-in-out;
+	transition: all 0.5s ease-in-out;
+	-webkit-transform: scale(0);
+	-ms-transform: scale(0);
+	transform: scale(0);
+}
+
+.header-menu-toggle:hover,
+.header-menu-toggle:focus,
+.header-menu-toggle:active {
+	border-color: transparent;
+	color: #505050;
+	background-color: transparent;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
+.header-menu-toggle .icon-stroke {
+	width: 2rem;
+	height: 2rem;
+}
+
+.header-menu-toggle.toggled .icon-menu,
+.header-menu-toggle .icon-close {
+	display: none;
+}
+
+.header-menu-toggle.toggled .icon-close {
+	display: block;
+}
+
+.stick .header-menu-toggle {
+	opacity: 1;
+	-webkit-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
 }
 
 /** Site Branding */
@@ -1895,8 +2064,10 @@ a.more-link:focus .icon-stroke {
 	float: left;
 	position: relative;
 	z-index: 1;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	left: 0;
+	padding: 10px;
+	-webkit-transition: all 0.25s ease-in-out;
+	transition: all 0.25s ease-in-out;
 }
 
 .site-branding,
@@ -1942,6 +2113,10 @@ a.custom-logo-link {
 .header-search-area {
 	clear: both;
 	margin-bottom: 10px;
+	padding-right: 10px;
+	padding-left: 10px;
+	-webkit-transition: all 0.25s ease-in-out;
+	transition: all 0.25s ease-in-out;
 }
 
 .header-search-area label {
@@ -1959,6 +2134,8 @@ a.custom-logo-link {
 	width: 50%;
 	height: 50px;
 	border-right-width: 1px;
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
 }
 
 .header-search-area .search-submit {
@@ -1966,7 +2143,7 @@ a.custom-logo-link {
 	width: 50px;
 	height: 50px;
 	border-color: rgba(0, 0, 0, 0.1);
-	background-color: #fff;
+	background-color: rgba(255, 255, 255, 0.5);
 }
 
 .header-search-area .search-submit .icon-stroke {
@@ -2015,6 +2192,11 @@ a.custom-logo-link {
 	justify-content: center;
 }
 
+.page-header-inner {
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
+}
+
 .page-header-thumbnail {
 	overflow: hidden;
 	position: absolute;
@@ -2056,8 +2238,7 @@ a.custom-logo-link {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6000000', endColorstr='#4d000000',GradientType=1 ); /* IE6-9 */
 }
 
-.page-header-title {
-	margin-bottom: 0.5rem;
+.page-title {
 	font-size: 32px;
 	font-size: 2rem;
 	font-weight: 500;
@@ -2066,7 +2247,8 @@ a.custom-logo-link {
 /** Sidebar footer */
 
 #tertiary {
-	padding-top: 40px;
+	padding-top: 20px;
+	background-color: #fff;
 }
 
 /** Site Footer */
@@ -2079,6 +2261,15 @@ a.custom-logo-link {
 	background-color: #fff;
 	font-size: 14px;
 	font-size: 0.875rem;
+}
+
+.site-footer a {
+	color: #505050;
+}
+
+.site-footer a:hover,
+.site-footer a:focus {
+	color: #ff916f;
 }
 
 /** Return to top */
@@ -2184,6 +2375,11 @@ a.custom-logo-link {
 	padding-left: 10px;
 }
 
+.site-content > .container {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
 
 /*--------------------------------------------------------------
 # Media Queries
@@ -2208,11 +2404,6 @@ a.custom-logo-link {
 	.menu-toggle,
 	.sub-menu-toggle {
 		display: none;
-	}
-
-	.main-navigation {
-		margin-right: -20px;
-		margin-left: -20px;
 	}
 
 	.main-navigation {
@@ -2430,12 +2621,58 @@ a.custom-logo-link {
 		color: #fff;
 	}
 
+	.comment-navigation a,
+	.posts-navigation a,
+	.post-navigation a {
+		padding-top: 20px;
+		padding-right: 30px;
+		padding-bottom: 20px;
+		padding-left: 30px;
+	}
+
+	.comment-navigation,
+	.posts-navigation,
+	.post-navigation {
+		margin-bottom: 20px;
+	}
+
+	.pagination {
+		margin-bottom: 20px;
+	}
+
+	.page-numbers {
+		display: inline-block;
+	}
+
+	.page-numbers.current {
+		color: #ff5722;
+	}
+
+	.page-numbers.current .screen-reader-text {
+		overflow: hidden;
+		clip: rect(1px, 1px, 1px, 1px);
+		position: absolute !important;
+		width: 1px;
+		height: 1px;
+	}
+
 	.entry-inner {
 		margin-bottom: 20px;
+		padding: 20px;
 	}
 
 	.entry-thumbnail.alignleft {
 		max-width: 100%;
+	}
+
+	.author-info {
+		margin-bottom: 20px;
+		padding: 30px;
+	}
+
+	.comments-area {
+		margin-bottom: 20px;
+		padding: 20px;
 	}
 
 	p.comment-form-email {
@@ -2454,14 +2691,32 @@ a.custom-logo-link {
 		width: auto;
 	}
 
-	.site-header {
-		padding-right: 20px;
-		padding-left: 20px;
+	.admin-bar .site-header.stick {
+		top: 32px !important;
+	}
+
+	.site-header.stick {
+		-webkit-box-shadow: 0 16px 64px 16px rgba(0, 0, 0, 0.1);
+		box-shadow: 0 16px 64px 16px rgba(0, 0, 0, 0.1);
+	}
+
+	.site-header.stick .main-navigation {
+		display: none;
+	}
+
+	.site-header.stick .main-navigation.show {
+		display: block;
 	}
 
 	.site-branding {
 		padding-top: 20px;
 		padding-bottom: 20px;
+	}
+
+	.stick .site-branding {
+		left: 60px;
+		padding-top: 10px;
+		padding-bottom: 10px;
 	}
 
 	.header-search-area {
@@ -2474,22 +2729,31 @@ a.custom-logo-link {
 		padding-left: 230px;
 	}
 
-	.page-title,
-	.page-description,
-	.term-description {
+	.stick .header-search-area {
+		padding-top: 10px;
+		padding-left: 290px;
+	}
+
+	.header-search-area .search-filter {
+		border-top-right-radius: 0;
+		border-bottom-right-radius: 0;
+	}
+
+	.page-header-inner {
 		max-width: 60%;
 	}
 
-	.page-header.has-archive-thumbnail .page-title,
-	.page-header.has-archive-thumbnail
-	.page-description,
-	.page-header.has-archive-thumbnail
-	.term-description {
+	.has-archive-thumbnail .page-header-inner {
 		margin-right: auto;
 		margin-left: auto;
 	}
 
 	.site-footer {
+		padding-top: 20px;
+		padding-bottom: 20px;
+	}
+
+	.site-content > .container {
 		padding-top: 20px;
 		padding-bottom: 20px;
 	}
@@ -2541,32 +2805,40 @@ a.custom-logo-link {
 }
 
 @media (min-width: 992px) {
-	.comment-navigation a,
-	.posts-navigation a,
-	.post-navigation a {
-		padding-right: 40px;
-		padding-left: 40px;
-	}
-
 	.entry-inner {
 		padding: 30px;
-		padding-bottom: 20px;
 	}
 
 	.entry-thumbnail {
 		margin-top: -30px;
 		margin-right: -30px;
+		margin-bottom: 30px;
 		margin-left: -30px;
+	}
+
+	.comments-area {
+		margin-bottom: 40px;
+		padding: 30px;
 	}
 
 	.container {
 		max-width: 960px;
+	}
+
+	.site-content > .container {
+		padding-top: 30px;
+		padding-bottom: 30px;
 	}
 }
 
 @media (min-width: 1200px) {
 	.container {
 		max-width: 1140px;
+	}
+
+	.site-content > .container {
+		padding-top: 40px;
+		padding-bottom: 40px;
 	}
 }
 
